# roku-cli

./: LICENSE.txt  README.md  __main__.py  pyproject.toml
roku_cli/: command_line.py  main.py  return_code.py  version.py
scripts/: install  install.bat
